[package]
name = "js-error-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde_derive_internals = "0.29.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
macrotest = "1.0.9"
